arr-stack/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: radarr.rossreicks.com
    external-dns.alpha.kubernetes.io/target: home.rossreicks.com
    nginx.ingress.kubernetes.io/proxy-body-size: 10000m
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - radarr.rossreicks.com
    secretName: wildcard-cert-prod-tls
  rules:
    - host: radarr.rossreicks.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr-kube
                port:
                  number: 80
